# openfl

./: requirements.txt  setup.py
openfl-flower/: README.md  deserialize_message.py  message_conversion.py  message_logger.py  openfl_client_with_local_grpc_server.py  openfl_server_with_local_grpc_client.py
openfl-flower/app-pytorch/: pyproject.toml
openfl-flower/openfl/proto/: openfl.proto
openfl-gramine/: Dockerfile.gramine  Dockerfile.graminized.workspace
openfl-tutorials/experimental/DiGress/: Workflow_Interface_DiGress.ipynb  config.yaml  env.txt  guacamol.yaml
openfl-tutorials/experimental/DiGress_regressor/: Workflow_Interface_DiGress_combined.ipynb  Workflow_Interface_DiGress_regressoronly.ipynb  conditional.yaml  config.yaml  regressor_model.yaml
openfl-workspace/flower-app-pytorch/: message_conversion.py  openfl_client_with_local_grpc_server.py  openfl_server_with_local_grpc_client.py
openfl-workspace/flower-app-pytorch/app-pytorch/: README.md  pyproject.toml
openfl-workspace/flower-app-pytorch/app-pytorch/app_pytorch/: client_app.py  server_app.py  task.py
openfl-workspace/flower-app-pytorch/plan/: cols.yaml  plan.yaml
openfl-workspace/flwr-workspace/: dummy_grpc_server.py  openfl_local_grpc_client.py  openfl_local_grpc_server.py
openfl-workspace/flwr-workspace/app-pytorch/: README.md  pyproject.toml
openfl-workspace/flwr-workspace/transport/: message_conversion.py  message_logger.py  (+2 more)
openfl-workspace/torch_digress/: requirements.txt
openfl/interface/: collaborator.py  plan.py
openfl/protocols/: aggregator.proto
(+51 files in other folders)
